--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<header>
 								<h1><a href="index.html" id="logo">Ruqquscraft</a></h1>
 								<hr />
-								<p>Another fine freebie by HTML5 UP</p>
+								<p>The Minecraft server you've always been looking for! Minimal plugins, friendly community, a friendly community!</p>
 							</header>
 							<footer>
 								<a href="#banner" class="button circled scrolly">Start</a>
