made dropdowns open new tab instead of going away from website

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 								<li>
 									<a href="#">Resources</a>
 									<ul>
-										<li><a href="https://map.ruqquscraft.net/">Dynamic Map</a></li>
-										<li><a href="https://discord.io/ruqquscraft/">Discord Server</a></li>
-										<li><a href="https://ruqqus.com/+Ruqquscraft/">Ruqqus Guild</a></li>
+										<li><a href="https://map.ruqquscraft.net/" target="_blank">Dynamic Map</a></li>
+										<li><a href="https://discord.io/ruqquscraft/" target="_blank">Discord Server</a></li>
+										<li><a href="https://ruqqus.com/+Ruqquscraft/" target="_blank">Ruqqus Guild</a></li>
 									</ul>
 								</li>
 								<li><a href="left-sidebar.html">Left Sidebar</a></li>
