--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 					<header>
 						<h2>Welcome to <strong>Ruqquscraft</strong>.</h2>
 						<p>
-							A semi-vanilla survival multiplayer server
-							With a friendly community.
+							Community Showcase
 						</p>
 					</header>
 				</section>
@@ -68,9 +67,9 @@
 						<article>
 							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Pulvinar sagittis congue</a></h3>
+								<h3><a href="#">Eisotopius' Castle</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>An imposing castle built close to spawn by Eisotopius0</p>
 						</article>
 
 						<article>
