--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<div class="reel">
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/eiso_castle.jpg" alt="" /></a>
 							<header>
 								<h3><a href="#">Eisotopius' Castle</a></h3>
 							</header>
