dereffed main logo

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Ruqquscraft</a></h1>
+								<h1>Ruqquscraft</h1>
 								<hr />
 								<p>The Minecraft server you've always been looking for! Minimal plugins, simple rules, a friendly community!</p>
 							</header>
