--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1>Ruqquscraft</h1>
+								<div class="boxed-text" style="border:2px #8916ac; border-radius: 20px;"><h1>Ruqquscraft</h1></div>
 								<hr />
 								<p>The Minecraft server you've always been looking for! Minimal plugins, simple rules, a friendly community!</p>
 							</header>
