added another picture

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<div class="boxed-text" style="border:2px #8916ac; border-radius: 20px;"><h1>Ruqquscraft</h1></div>
+								<h1>Ruqquscraft</h1>
 								<hr />
 								<p>The Minecraft server you've always been looking for! Minimal plugins, simple rules, a friendly community!</p>
 							</header>
@@ -73,11 +73,11 @@
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/ruqqie_island.png" alt="" /></a>
 							<header>
-								<h3><a href="#">Fermentum sagittis proin</a></h3>
+								<h3><a href="#">Ruqqie's Vacation</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>A cute rendition of our lovable server mascot, Ruqqie built by jBoi76</p>
 						</article>
 
 						<article>
