--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<header>
 						<h2>Welcome to <strong>Ruqquscraft</strong>.</h2>
 						<p>
-							Community Showcase
+							<strong>Community Showcase</strong>
 						</p>
 					</header>
 				</section>
@@ -69,7 +69,7 @@
 							<header>
 								<h3><a href="#">Eisotopius' Castle</a></h3>
 							</header>
-							<p>An imposing castle built close to spawn by Eisotopius0</p>
+							<p>An imposing castle built close to spawn by Eisotopius0.</p>
 						</article>
 
 						<article>
@@ -77,71 +77,39 @@
 							<header>
 								<h3><a href="#">Ruqqie's Vacation</a></h3>
 							</header>
-							<p>A cute rendition of our lovable server mascot, Ruqqie built by jBoi76</p>
+							<p>A cute rendition of our lovable server mascot, Ruqqie, built by jBoi76.</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/winterside_view.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Sed quis rhoncus placerat</a></h3>
+								<h3><a href="#">Winterside</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>A nice view in Winterside, one of our first player built communities!</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/mush_house.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Ultrices urna sit lobortis</a></h3>
+								<h3><a href="#">Mushroom House</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Mushroom themed house built by Kronus_, the server owner.</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/paltomo_bridge.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Varius magnis sollicitudin</a></h3>
+								<h3><a href="#">Paltomo's Bridge</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>Rustic bridge by Paltomo, leads to Winterside!</p>
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/slime_island.jpg" alt="" /></a>
 							<header>
-								<h3><a href="#">Pulvinar sagittis congue</a></h3>
+								<h3><a href="#">Slime Island</a></h3>
 							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Fermentum sagittis proin</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Sed quis rhoncus placerat</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Ultrices urna sit lobortis</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
-						</article>
-
-						<article>
-							<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-							<header>
-								<h3><a href="#">Varius magnis sollicitudin</a></h3>
-							</header>
-							<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+							<p>A slime shrine built in the middle of the sea by Timred! So cute!</p>
 						</article>
 
 					</div>
