--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 				<section id="banner">
 					<header>
 						<h2>Welcome to <strong>Ruqquscraft</strong>.</h2>
+
+						<h2>Join today at: <strong>ruqquscraft.net</strong></h2>
+
 						<p>
 							<strong>Community Showcase</strong>
 						</p>
