--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Welcome to <strong>Ruqquscraft</strong>.</h2>
+						<h2>Welcome to <strong>Ruqquscraft</strong>!</h2>
 
 						<h2>Join today at: <strong>ruqquscraft.net</strong></h2>
 
-						<p>
-							<strong>Community Showcase</strong>
-						</p>
+						<h3>
+								<strong>Community Showcase</strong>
+						</h3>
 					</header>
 				</section>
 
@@ -122,24 +122,20 @@
 				<div class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+						<a href="#" class="image featured"><img src="images/ss_ruqqie.jpg" alt="" /></a>
 						<header>
-							<h2><a href="#">Sed massa imperdiet magnis</a></h2>
+							<h2>Server Rules</h2>
 							<p>
-								Sociis aenean eu aenean mollis mollis facilisis primis ornare penatibus aenean. Cursus ac enim
-								pulvinar curabitur morbi convallis. Lectus malesuada sed fermentum dolore amet.
+								To maintain a friendly community and server experience for all, please follow the following rules.
 							</p>
 						</header>
-						<p>
-							Commodo id natoque malesuada sollicitudin elit suscipit. Curae suspendisse mauris posuere accumsan massa
-							posuere lacus convallis tellus interdum. Amet nullam fringilla nibh nulla convallis ut venenatis purus
-							sit arcu sociis. Nunc fermentum adipiscing tempor cursus nascetur adipiscing adipiscing. Primis aliquam
-							mus lacinia lobortis phasellus suscipit. Fermentum lobortis non tristique ante proin sociis accumsan
-							lobortis. Auctor etiam porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum
-							consequat integer interdum integer purus sapien. Nibh eleifend nulla nascetur pharetra commodo mi augue
-							interdum tellus. Ornare cursus augue feugiat sodales velit lorem. Semper elementum ullamcorper lacinia
-							natoque aenean scelerisque.
-						</p>
+							<div class="rule-list" style ="text-align: center;">
+					
+									1. Be kind to your fellow player <br>
+									2. some other rule <br>
+									3. some other rule <br>
+						
+							</div>
 						<footer>
 							<a href="#" class="button">Continue Reading</a>
 						</footer>
