stylized community showcase

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<header>
 								<h1>Ruqquscraft</h1>
 								<hr />
-								<p>The Minecraft server you've always been looking for! <br>Minimal plugins, simple rules, a friendly community!</p>
+								<p>The Minecraft server you've always been looking for! Minimal plugins, simple rules, a friendly community!</p>
 							</header>
 							<footer>
 								<a href="#banner" class="button circled scrolly">Start</a>
@@ -118,16 +118,14 @@
 							color: white;
 						}
 						</style>
-
-
-						<h3>
-								<strong>Community Showcase</strong>
-						</h3>
 					</header>
 				</section>
 
 			<!-- Carousel -->
 				<section class="carousel">
+					
+					<h2 id="title-header"> <strong id="title-text">Community Showcase</strong> </h2>
+					
 					<div class="reel">
 
 						<article>
