--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<header>
 								<h1>Ruqquscraft</h1>
 								<hr />
-								<p>The Minecraft server you've always been looking for! Minimal plugins, simple rules, a friendly community!</p>
+								<p>The Minecraft server you've always been looking for! <br> Minimal plugins, simple rules, a friendly community!</p>
 							</header>
 							<footer>
 								<a href="#banner" class="button circled scrolly">Start</a>
