--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -30,26 +30,14 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Dropdown</a>
+									<a href="#">Resources</a>
 									<ul>
-										<li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
-											<a href="#">And a submenu &hellip;</a>
-											<ul>
-												<li><a href="#">Lorem ipsum dolor</a></li>
-												<li><a href="#">Phasellus consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Veroeros feugiat</a></li>
+										<li><a href="https://map.ruqquscraft.net/" target="_blank" rel="noopener noreferrer">Dynamic Map</a></li>
+										<li><a href="https://discord.io/ruqquscraft/" target="_blank" rel="noopener noreferrer">Discord Server</a></li>
+										<li><a href="https://ruqqus.com/+Ruqquscraft/" target="_blank" rel="noopener noreferrer">Ruqqus Guild</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="no-sidebar.html">Rules</a></li>
 							</ul>
 						</nav>
 
