--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Resources</a>
+									<a >Resources</a>
 									<ul>
 										<li><a href="https://map.ruqquscraft.net/" target="_blank" rel="noopener noreferrer">Dynamic Map</a></li>
 										<li><a href="https://discord.io/ruqquscraft/" target="_blank" rel="noopener noreferrer">Discord Server</a></li>
@@ -91,28 +91,6 @@
 							document.getElementById("copyButton").innerHTML = "ruqquscraft.net";
 						}
 						</script>
-						
-						<style>
-						#copyButton {
-							border: none;
-							color: white;
-							background-color: #7E22CE;
-							padding: 16px 16px;
-							text-align: center;
-							font-size: 16px;
-							margin: 4px 2px;
-							-webkit-transition-duration: 0.4s; /* Safari */
-							transition-duration: 0.4s;
-							cursor: pointer;
-							border-radius: 4px;
-							width: 50%;
-						}
-						
-						#copyButton:hover {
-							background-color: #7E22CE;
-							color: white;
-						}
-						</style>
 					</header>
 				</section>
 
@@ -124,7 +102,7 @@
 					<div class="reel">
 
 						<article>
-							<a href="#" class="image featured"><img src="images/eiso_castle.jpg" alt="" /></a>
+							<a class="image featured"><img src="images/eiso_castle.jpg" alt="" /></a>
 							<header>
 								<h3>Eisotopius' Castle</h3>
 							</header>
@@ -132,7 +110,7 @@
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/ruqqie_island.png" alt="" /></a>
+							<a class="image featured"><img src="images/ruqqie_island.png" alt="" /></a>
 							<header>
 								<h3>Ruqqie's Vacation</h3>
 							</header>
@@ -140,7 +118,7 @@
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/winterside_view.jpg" alt="" /></a>
+							<a class="image featured"><img src="images/winterside_view.jpg" alt="" /></a>
 							<header>
 								<h3>Winterside</h3>
 							</header>
@@ -148,7 +126,7 @@
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/mush_house.jpg" alt="" /></a>
+							<a class="image featured"><img src="images/mush_house.jpg" alt="" /></a>
 							<header>
 								<h3>Mushroom House</h3>
 							</header>
@@ -156,7 +134,7 @@
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/paltomo_bridge.jpg" alt="" /></a>
+							<a class="image featured"><img src="images/paltomo_bridge.jpg" alt="" /></a>
 							<header>
 								<h3>Paltomo's Bridge</h3>
 							</header>
@@ -164,7 +142,7 @@
 						</article>
 
 						<article>
-							<a href="#" class="image featured"><img src="images/slime_island.jpg" alt="" /></a>
+							<a class="image featured"><img src="images/slime_island.jpg" alt="" /></a>
 							<header>
 								<h3>Slime Island</h3>
 							</header>
@@ -179,38 +157,70 @@
 
 					<section id="features" class="container special">
 						<header>
-							<h2>Morbi ullamcorper et varius leo lacus</h2>
-							<p>Ipsum volutpat consectetur orci metus consequat imperdiet duis integer semper magna.</p>
+							<h2>Server Features</h2>
+							<p>Here are a few features that set us apart from your average server.</p>
 						</header>
 						<div class="row">
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
+								<a class="image featured"><img src="images/mine_discord.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">Gravida aliquam penatibus</a></h3>
+									<h3>Discord Integrations</h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									In the server you are able to link your Discord account with a bot on our <a href="https://discord.io/ruqquscraft">Discord</a> and communicate with people on the server.
+									If two or more linked players join the Lobby voice channel, proximity voice chat will be enabled! This lets you hear your friends voice 
+									when you are close to each other in game.
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+								<a class="image featured"><img src="images/land_claim.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">Sed quis rhoncus placerat</a></h3>
+									<h3>Land Claiming</h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									Never worry about griefers breaking your builds which you've worked hard to make,
+									you automatically receive claim blocks while being active on the server for claiming your lands.
+									The server is also backed up nightly, and staff are able to roll back damages to builds should any occur!
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
+								<a class="image featured"><img src="images/build_contest.jpg" alt="" /></a>
 								<header>
-									<h3><a href="#">Magna laoreet et aliquam</a></h3>
+									<h3>Server Wide Events</h3>
 								</header>
 								<p>
-									Amet nullam fringilla nibh nulla convallis tique ante proin sociis accumsan lobortis. Auctor etiam
-									porttitor phasellus tempus cubilia ultrices tempor sagittis. Nisl fermentum consequat integer interdum.
+									Monthly server wide events are hosted on the server, compete against friends to see who will come out on top!
+									These can range from something simple such as who can mine the most diamonds to harder challenges such as who can make the best build. 
+								</p>
+							</article>
+							<article class="col-4 col-12-mobile special">
+								<a class="image featured"><img src="images/cross_platform.jpg" alt="" /></a>
+								<header>
+									<h3>Cross Platform Play</h3>
+								</header>
+								<p>
+									If you have a Java Account and a Bedrock Edition account you can join Ruqquscraft from any device that runs Minecraft!
+									The server address remains the same, simply use 25591 as a port when connecting from your device.
+								</p>
+							</article>
+							<article class="col-4 col-12-mobile special">
+								<a class="image featured"><img src="images/dynmap.jpg" alt="" /></a>
+								<header>
+									<h3>Dynamic Map</h3>
+								</header>
+								<p>
+									View your builds unfolding with a birds eye view on our <a href="https://map.ruqquscraft.net">Dynamic Map</a> as you play!
+									Use it to locate where you are, find your friends' builds, make map art and more!
+								</p>
+							</article>
+							<article class="col-4 col-12-mobile special">
+								<a class="image featured"><img src="images/graves.jpg" alt="" /></a>
+								<header>
+									<h3>Graves</h3>
+								</header>
+								<p>
+									You still have a chance to reclaim your items after you die in Ruqquscraft! Whenever you die a portion of your levels
+									and items will all be stored inside a lootable gravestone, it's up to you to find your way back to it however. 
 								</p>
 							</article>
 						</div>
@@ -226,7 +236,7 @@
 							<li>&copy; Ruqquscraft Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
-		</div>
+				</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
