--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 								<!-- Copyright -->
 					<div class="copyright">
 						<ul class="menu">
-							<li>&copy; Ruqquscraft Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>Modified by Kronus_</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 				</div>
