--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Ruqquscraft</title>
+		<meta http-equiv="pragma" content="no-cache" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="preconnect" href="https://fonts.gstatic.com">
