--- a/rules.html
+++ b/rules.html
@@ -40,7 +40,7 @@
 										<li><a href="https://ruqqus.com/+Ruqquscraft/" target="_blank" rel="noopener noreferrer">Ruqqus Guild</a></li>
 									</ul>
 								</li>
-								<li><a href="no-sidebar.html">Rules</a></li>
+								<li><a href="rules.html">Rules</a></li>
 							</ul>
 						</nav>
 
