fixed typo, updated features

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 							<header>
 								<h3>Slime Island</h3>
 							</header>
-							<p>A slime shrine built in the middle of the sea by Timred! So cute!</p>
+							<p>A slime shrine built in the middle of the sea by Timbred! So cute!</p>
 						</article>
 
 					</div>
@@ -194,13 +194,13 @@
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
-								<a class="image featured"><img src="images/cross_platform.jpg" alt="" /></a>
+								<a class="image featured"><img src="images/colormenu.png" alt="" /></a>
 								<header>
-									<h3>Cross Platform Play</h3>
+									<h3>Custom Nickname Colors</h3>
 								</header>
 								<p>
-									If you have a Java Account and a Bedrock Edition account you can join Ruqquscraft from any device that runs Minecraft!
-									The server address remains the same, simply use 25591 as a port when connecting from your device.
+									We've made a custom plugin that lets you unlock custom nickname colors simply by playing the game and
+									meeting some objectives we programmed! To check it out type /colormenu on the server.
 								</p>
 							</article>
 							<article class="col-4 col-12-mobile special">
